--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.xerial</groupId>
+          <artifactId>sqlite-jdbc</artifactId>
+          <version>3.42.0.0</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>medieval-adventures</finalName>
