--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,30 @@
           <artifactId>sqlite-jdbc</artifactId>
           <version>3.42.0.0</version>
       </dependency>
+      <dependency>
+          <groupId>com.googlecode.soundlibs</groupId>
+          <artifactId>jlayer</artifactId>
+          <version>1.0.1.4</version>
+      </dependency>
+          <!-- API SLF4J -->
+          <dependency>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-api</artifactId>
+              <version>2.0.9</version>
+          </dependency>
+
+          <!-- Implementação Logback -->
+          <dependency>
+              <groupId>ch.qos.logback</groupId>
+              <artifactId>logback-classic</artifactId>
+              <version>1.4.14</version>
+          </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.30</version>
+          <scope>provided</scope> <!-- Não precisa ser empacotado com o JAR final -->
+      </dependency>
   </dependencies>
   <build>
     <finalName>medieval-adventures</finalName>
@@ -29,8 +53,16 @@
               <configuration>
                   <source>15</source>
                   <target>15</target>
+                  <annotationProcessorPaths>
+                      <annotationProcessorPath>
+                          <groupId>org.projectlombok</groupId>
+                          <artifactId>lombok</artifactId>
+                          <version>1.18.30</version> <!-- ou a versão mais recente -->
+                      </annotationProcessorPath>
+                  </annotationProcessorPaths>
               </configuration>
           </plugin>
       </plugins>
   </build>
+
 </project>
